test/testdata/classes/inheritance/self_referential_superclass_error.lox
// error: class cannot inherit from itself
// lint error: class cannot inherit from itself
class Foo < Foo {}
